- Adding Start Element on the canvas - Adding canvas element labels - Translating enough on save to ensure elements don't overlap with the start element
#review-15888096 @*ddsouza

https://gus.lightning.force.com/lightning/r/ADM_Work__c/a07B0000004vXP1IAM/view

@rev ddsouza@
BLT: CLI local=false

@precheckin 15889831@

[git-p4: depot-paths = "//app/main/core/ui-interaction-builder-components/": change = 15890851]

--- a/src/main/components/builder_platform_interaction/container/container.css
+++ b/src/main/components/builder_platform_interaction/container/container.css
@@ -57,13 +57,15 @@
 }
 
 /************* Node *****************/
-.THIS builder_platform_interaction-node .node-container {
+.THIS builder_platform_interaction-node .element-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    cursor: pointer;
-    transition: box-shadow 0.15s ease-in;
     z-index: 200;
+}
+
+.THIS builder_platform_interaction-node .node-container {
+    cursor: pointer;
 }
 
 .THIS builder_platform_interaction-node .node-container:active {
